# 2425_Projet2A_AresCFR

./: Notes_consignes_projet.txt  README.md  Summer_Tasks.md
1A/: README.md
1A/Meca_PAMI/: README.md  README.md.txt
1A/PCB_PAMI/: README.md  README.md.txt
1A/STM_et_Codes_PAMI/: README.md  README.md.txt
2A/: README.md  Vision
2A/Demandes d'achats/: README.md  T81_Hub_BaneBots
2A/Firmware/: README.md
2A/Firmware/ros2_ws/src/serial_package/: CMakeLists.txt  instructions_bleu.txt  instructions_jaune.txt  message_test.msg
2A/Firmware/ros2_ws/src/serial_package/bags/0/: 0_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/1/: 1_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/3/: metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/4/: 4_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/5/: 5_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file0/: file0_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file1/: file1_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file2/: file2_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file3/: file3_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file4/: file4_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file5/: file5_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/file6/: file6_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/rosbag2_2025_01_28-14_10_13/: metadata.yaml  rosbag2_2025_01_28-14_10_13_0.db3
2A/Firmware/ros2_ws/src/serial_package/bags/rosbag2_2025_01_28-15_47_40/: metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/bags/rosbag2_2025_01_28-15_48_25/: metadata.yaml  rosbag2_2025_01_28-15_48_25_0.db3
2A/Firmware/ros2_ws/src/serial_package/launch/: OdometryNode.launch.py  UART_Node.launch.py  bag_launch.launch.py  combined_launch.py  launch_robot.py  launch_serial_lidar.py
2A/Firmware/ros2_ws/src/serial_package/src/: .bag_player_node.py.swp  OdometryNode.cpp  UART_Node.cpp  bag_listener.py  bag_listener_2.py  bag_playback.py  bag_player_node.py  bagfile_stm32.py  control_keyboard.py  instructions_node.cpp  keyboard_control.py  keyboard_lidar_free.py  keyboard_test.py  keyboard_test_2.py  robot_control_node.py  robot_control_node_2.py  robot_control_node_3.py  robot_control_node_4.py  robot_control_node_5.py  robot_control_node_6.py  robot_control_node_7.py  screen_reader.py  serial_node.py  serial_node_2.py  serial_node_3.py  serial_node_4.py  serial_node_5.py  serial_node_6.py  test_uart.py  test_uart_lidar.py  test_uart_lidar2.py  tirette_node.py  uart_class.cpp
2A/Firmware/ros2_ws/src/serial_package/src/1/: 1_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/src/2/: 2_0.db3  metadata.yaml
2A/Firmware/ros2_ws/src/serial_package/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2A/Firmware/ros2_ws/src/serial_package/src/log/: latest_build
2A/Reseau/: README.md  ROUTEUR_BASE_20_01_25.backup  ROUTEUR_BASE_28_01_2025.backup  ROUTEUR_ROBOT_20_01_2025.backup  routeur1_17_12_24.backup
2A/Vision/: Aruco_Detection.py  Aruco_Rectangle_Detection.py  CFR_find_Planche.py  Camera_Calibration.py  Cost_Matrix.py  Kalman.py  Matrix_from_Camera.py  Matrix_from_GrayScale_Image.py  Optimal_Path.py  README.md  Robot_Pose_V1.py  Robot_Pose_V2.py  two_cameras.py
2A/robotcraft_courses/: ReadMe.txt
Demandes d'achats/: Billes_8883016_RS200-6385  Liens + Descriptions.md  README.md  Roues_BaneBOts_40A
Docs/reu1/: Record_Réunion_CFR.mp4.url
Firmware/: README.md  lien_repository_Cube_IDE.txt
Firmware/CFR_G474RET6/: .cproject  CFR_G474RET6.ioc
Firmware/STM32_PI_Connexion/: main_CFR_uart.c
Firmware/STM32_moteurs/: README.md
Hardware/Hardware_électronique/: Connections.txt
MainBoard/: ToBuy.txt
ROS_tutorials/ESIEE/: README
robotcraft/Intrduction to Linux/: Craft5A_IntroductionLinux.webloc  Craft5B_IntroductionLinux.webloc  REAADME.txt
robotcraft/Mechatronics/: Craft_3A_Mechatronics_Introduction_2024.webloc  Craft_3B_Mechatronics_MobileRoboticPlatform_2024.webloc  Mechatronics_MobileRobotPlatform_datasheet.webloc  arduino_hardware_test.webloc
robotcraft/Mobile Robotics Programming/: Arduino_pinout_robotcraft_bot.ino.webloc  Craft4A_MobileRoboticsProgramming-Introduction.webloc  Craft4B_MobileRoboticsProgramming-KinematicsAndControl.webloc  [Book] Arduino Development Cookbook.webloc  [Book] Arduino for Robotics.webloc
robotcraft/Robot Operating System/: Craft6.1. Introduction to ROS day 2.webloc  Craft_6_1_Introduction_to_ROS_Day1 - Presentation.webloc  Craft_6_2_ROSSimulation - Presentation.webloc  Craft_6_3_ROSSimulation - Presentation.webloc  Craft_6_3_ROS_Integration - Presentation.webloc  Craft_6_3_bash_src_trick - Example Code.webloc  Craft_6_3_log_info_values - Example Code.webloc  Craft_6_3_robotcraft_robot_description - ROS Package.webloc  Craft_6_3_ros_lib - Arduino ROS library NOETIC.webloc  README
robotcraft/introduction to Programming/: Code Blocks v17.12.webloc  Craft2A_IntroductionToProgramming-WarmUp.webloc  (+5 more)
(+1519 files in other folders)
